proc.c
@@ -1023,7 +1023,8 @@ mnew(VALUE klass, VALUE obj, ID id, VALUE mclass, int scope)
  *   meth == other_meth  -> true or false
  *
  * Two method objects are equal if they are bound to the same
- * object and refer to the same method definition.
+ * object and refer to the same method definition and their owners are the
+ * same class or module.
  */
 
 static VALUE
